Initial Plan for the application
 Conflicts:
	Readme

--- a/Readme
+++ b/Readme
@@ -1,3 +1,20 @@
-Readme
+# Middle tier application written in Go.
 
-Initial Commit
+Demonstration of webservices.
+
+The application connects to the backend REDIS Instance and exposes, endpoints for the frontend to perform the action.
+
+## Application Activity
+
+The application contains logic for performing and operation of reading and writing to the Redis instance through the API Call.
+
+
+## API
++-------------------------+
+|    ENDPOINTS | REST API |
+|--------------|----------|
+| /user/insert | Yes      |
+| /user/getall | Yes      |
+| /home        | Yes      |
++-------------------------+
+
